src/main/java/thesis/scxmlidl/antlr/WebIDLParser.java
package thesis.scxmlidl.antlr;
// Generated from WebIDL.g4 by ANTLR 4.5.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class WebIDLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, INTEGER_WEBIDL=80, 
		FLOAT_WEBIDL=81, IDENTIFIER_WEBIDL=82, STRING_WEBIDL=83, WHITESPACE_WEBIDL=84, 
		COMMENT_WEBIDL=85, OTHER_WEBIDL=86;
	public static final int
		RULE_webIDL = 0, RULE_definitions = 1, RULE_definition = 2, RULE_callbackOrInterface = 3, 
		RULE_callbackRestOrInterface = 4, RULE_interface_ = 5, RULE_class_ = 6, 
		RULE_partial = 7, RULE_partialDefinition = 8, RULE_partialInterface = 9, 
		RULE_interfaceMembers = 10, RULE_interfaceMember = 11, RULE_dictionary = 12, 
		RULE_dictionaryMembers = 13, RULE_dictionaryMember = 14, RULE_required = 15, 
		RULE_partialDictionary = 16, RULE_default_ = 17, RULE_defaultValue = 18, 
		RULE_inheritance = 19, RULE_extension = 20, RULE_enum_ = 21, RULE_enumValueList = 22, 
		RULE_enumValueListComma = 23, RULE_enumValueListString = 24, RULE_callbackRest = 25, 
		RULE_typedef = 26, RULE_implementsStatement = 27, RULE_const_ = 28, RULE_constValue = 29, 
		RULE_booleanLiteral = 30, RULE_floatLiteral = 31, RULE_serializer = 32, 
		RULE_serializerRest = 33, RULE_serializationPattern = 34, RULE_serializationPatternMap = 35, 
		RULE_serializationPatternList = 36, RULE_stringifier = 37, RULE_stringifierRest = 38, 
		RULE_staticMember = 39, RULE_staticMemberRest = 40, RULE_readonlyMember = 41, 
		RULE_readonlyMemberRest = 42, RULE_readWriteAttribute = 43, RULE_attributeRest = 44, 
		RULE_attributeName = 45, RULE_attributeNameKeyword = 46, RULE_inherit = 47, 
		RULE_readOnly = 48, RULE_operation = 49, RULE_specialOperation = 50, RULE_specials = 51, 
		RULE_special = 52, RULE_operationRest = 53, RULE_optionalIdentifier = 54, 
		RULE_argumentList = 55, RULE_arguments = 56, RULE_argument = 57, RULE_optionalOrRequiredArgument = 58, 
		RULE_argumentName = 59, RULE_ellipsis = 60, RULE_iterable = 61, RULE_optionalType = 62, 
		RULE_readWriteMaplike = 63, RULE_readWriteSetlike = 64, RULE_maplikeRest = 65, 
		RULE_setlikeRest = 66, RULE_extendedAttributeList = 67, RULE_extendedAttributes = 68, 
		RULE_extendedAttribute = 69, RULE_extendedAttributeRest = 70, RULE_extendedAttributeInner = 71, 
		RULE_other = 72, RULE_argumentNameKeyword = 73, RULE_otherOrComma = 74, 
		RULE_type = 75, RULE_singleType = 76, RULE_unionType = 77, RULE_unionMemberType = 78, 
		RULE_unionMemberTypes = 79, RULE_nonAnyType = 80, RULE_bufferRelatedType = 81, 
		RULE_constType = 82, RULE_primitiveType = 83, RULE_unrestrictedFloatType = 84, 
		RULE_floatType = 85, RULE_unsignedIntegerType = 86, RULE_integerType = 87, 
		RULE_optionalLong = 88, RULE_promiseType = 89, RULE_null_ = 90, RULE_returnType = 91, 
		RULE_identifierList = 92, RULE_identifiers = 93, RULE_extendedAttributeNoArgs = 94, 
		RULE_extendedAttributeArgList = 95, RULE_extendedAttributeIdent = 96, 
		RULE_extendedAttributeIdentList = 97, RULE_extendedAttributeNamedArgList = 98;
	public static final String[] ruleNames = {
		"webIDL", "definitions", "definition", "callbackOrInterface", "callbackRestOrInterface", 
		"interface_", "class_", "partial", "partialDefinition", "partialInterface", 
		"interfaceMembers", "interfaceMember", "dictionary", "dictionaryMembers", 
		"dictionaryMember", "required", "partialDictionary", "default_", "defaultValue", 
		"inheritance", "extension", "enum_", "enumValueList", "enumValueListComma", 
		"enumValueListString", "callbackRest", "typedef", "implementsStatement", 
		"const_", "constValue", "booleanLiteral", "floatLiteral", "serializer", 
		"serializerRest", "serializationPattern", "serializationPatternMap", "serializationPatternList", 
		"stringifier", "stringifierRest", "staticMember", "staticMemberRest", 
		"readonlyMember", "readonlyMemberRest", "readWriteAttribute", "attributeRest", 
		"attributeName", "attributeNameKeyword", "inherit", "readOnly", "operation", 
		"specialOperation", "specials", "special", "operationRest", "optionalIdentifier", 
		"argumentList", "arguments", "argument", "optionalOrRequiredArgument", 
		"argumentName", "ellipsis", "iterable", "optionalType", "readWriteMaplike", 
		"readWriteSetlike", "maplikeRest", "setlikeRest", "extendedAttributeList", 
		"extendedAttributes", "extendedAttribute", "extendedAttributeRest", "extendedAttributeInner", 
		"other", "argumentNameKeyword", "otherOrComma", "type", "singleType", 
		"unionType", "unionMemberType", "unionMemberTypes", "nonAnyType", "bufferRelatedType", 
		"constType", "primitiveType", "unrestrictedFloatType", "floatType", "unsignedIntegerType", 
		"integerType", "optionalLong", "promiseType", "null_", "returnType", "identifierList", 
		"identifiers", "extendedAttributeNoArgs", "extendedAttributeArgList", 
		"extendedAttributeIdent", "extendedAttributeIdentList", "extendedAttributeNamedArgList"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'callback'", "'interface'", "'{'", "'}'", "';'", "'class'", "'partial'", 
		"'dictionary'", "'required'", "'='", "'['", "']'", "':'", "'extends'", 
		"'enum'", "','", "'('", "')'", "'typedef'", "'implements'", "'const'", 
		"'null'", "'true'", "'false'", "'-Infinity'", "'Infinity'", "'NaN'", "'serializer'", 
		"'getter'", "'inherit'", "'stringifier'", "'static'", "'readonly'", "'attribute'", 
		"'setter'", "'deleter'", "'legacycaller'", "'optional'", "'...'", "'iterable'", 
		"'<'", "'>'", "'maplike'", "'setlike'", "'-'", "'.'", "'?'", "'ByteString'", 
		"'DOMString'", "'FrozenArray'", "'RegExp'", "'USVString'", "'any'", "'boolean'", 
		"'byte'", "'double'", "'float'", "'long'", "'object'", "'octet'", "'or'", 
		"'sequence'", "'short'", "'unsigned'", "'void'", "'unrestricted'", "'DOMException'", 
		"'ArrayBuffer'", "'DataView'", "'Int8Array'", "'Int16Array'", "'Int32Array'", 
		"'Uint8Array'", "'Uint16Array'", "'Uint32Array'", "'Uint8ClampedArray'", 
		"'Float32Array'", "'Float64Array'", "'Promise'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, "INTEGER_WEBIDL", "FLOAT_WEBIDL", 
		"IDENTIFIER_WEBIDL", "STRING_WEBIDL", "WHITESPACE_WEBIDL", "COMMENT_WEBIDL", 
		"OTHER_WEBIDL"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "WebIDL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public WebIDLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class WebIDLContext extends ParserRuleContext {
		public DefinitionsContext definitions() {
			return getRuleContext(DefinitionsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(WebIDLParser.EOF, 0); }
		public WebIDLContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_webIDL; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebIDLListener ) ((WebIDLListener)listener).enterWebIDL(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebIDLListener ) ((WebIDLListener)listener).exitWebIDL(this);
		}
	}

	public final WebIDLContext webIDL() throws RecognitionException {
		WebIDLContext _localctx = new WebIDLContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_webIDL);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(198);
			definitions();
			setState(199);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionsContext extends ParserRuleContext {
		public ExtendedAttributeListContext extendedAttributeList() {
			return getRuleContext(ExtendedAttributeListContext.class,0);
		}
		public DefinitionContext definition() {
			return getRuleContext(DefinitionContext.class,0);
		}
		public DefinitionsContext definitions() {
			return getRuleContext(DefinitionsContext.class,0);
		}
		public DefinitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definitions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebIDLListener ) ((WebIDLListener)listener).enterDefinitions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebIDLListener ) ((WebIDLListener)listener).exitDefinitions(this);
		}
	}

	public final DefinitionsContext definitions() throws RecognitionException {
		DefinitionsContext _localctx = new DefinitionsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definitions);
		try {
			setState(206);
			switch (_input.LA(1)) {
			case T__0:
			case T__1:
			case T__5:
			case T__6:
			case T__7:
			case T__10:
			case T__14:
			case T__18:
			case IDENTIFIER_WEBIDL:
				enterOuterAlt(_localctx, 1);
				{
				setState(201);
				extendedAttributeList();
				setState(202);
				definition();
				setState(203);
				definitions();
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionContext extends ParserRuleContext {
		public CallbackOrInterfaceContext callbackOrInterface() {
			return getRuleContext(CallbackOrInterfaceContext.class,0);
		}
		public PartialContext partial() {
			return getRuleContext(PartialContext.class,0);
		}
		public DictionaryContext dictionary() {
			return getRuleContext(DictionaryContext.class,0);
		}
		public Enum_Context enum_() {
			return getRuleContext(Enum_Context.class,0);
		}
		public TypedefContext typedef() {
			return getRuleContext(TypedefContext.class,0);
		}
		public ImplementsStatementContext implementsStatement() {
			return getRuleContext(ImplementsStatementContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebIDLListener ) ((WebIDLListener)listener).enterDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebIDLListener ) ((WebIDLListener)listener).exitDefinition(this);
		}
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_definition);
		try {
			setState(214);
			switch (_input.LA(1)) {
			case T__0:
			case T__1:
			case T__5:
				enterOuterAlt(_localctx, 1);
				{
				setState(208);
				callbackOrInterface();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 2);
				{
				setState(209);
				partial();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 3);
				{
				setState(210);
				dictionary();
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 4);
				{
				setState(211);
				enum_();
				}
				break;
			case T__18:
				enterOuterAlt(_localctx, 5);
				{
				setState(212);
				typedef();
				}
				break;
			case IDENTIFIER_WEBIDL:
				enterOuterAlt(_localctx, 6);
				{
				setState(213);
				implementsStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CallbackOrInterfaceContext extends ParserRuleContext {
		public CallbackRestOrInterfaceContext callbackRestOrInterface() {
			return getRuleContext(CallbackRestOrInterfaceContext.class,0);
		}
		public Interface_Context interface_() {
			return getRuleContext(Interface_Context.class,0);
		}
		public Class_Context class_() {
			return getRuleContext(Class_Context.class,0);
		}
		public CallbackOrInterfaceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_callbackOrInterface; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebIDLListener ) ((WebIDLListener)listener).enterCallbackOrInterface(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebIDLListener ) ((WebIDLListener)listener).exitCallbackOrInterface(this);
		}
	}

	public final CallbackOrInterfaceContext callbackOrInterface() throws RecognitionException {
		CallbackOrInterfaceContext _localctx = new CallbackOrInterfaceContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_callbackOrInterface);
		try {
			setState(220);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(216);
				match(T__0);
				setState(217);
				callbackRestOrInterface();
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				setState(218);
				interface_();
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 3);
				{
				setState(219);
				class_();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CallbackRestOrInterfaceContext extends ParserRuleContext {
		public CallbackRestContext callbackRest() {
			return getRuleContext(CallbackRestContext.class,0);
		}
		public Interface_Context interface_() {
			return getRuleContext(Interface_Context.class,0);
		}
		public CallbackRestOrInterfaceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_callbackRestOrInterface; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebIDLListener ) ((WebIDLListener)listener).enterCallbackRestOrInterface(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebIDLListener ) ((WebIDLListener)listener).exitCallbackRestOrInterface(this);
		}
	}

	public final CallbackRestOrInterfaceContext callbackRestOrInterface() throws RecognitionException {
		CallbackRestOrInterfaceContext _localctx = new CallbackRestOrInterfaceContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_callbackRestOrInterface);
		try {
			setState(224);
			switch (_input.LA(1)) {
			case IDENTIFIER_WEBIDL:
				enterOuterAlt(_localctx, 1);
				{
				setState(222);
				callbackRest();
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				setState(223);
				interface_();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Interface_Context extends ParserRuleContext {
		public TerminalNode IDENTIFIER_WEBIDL() { return getToken(WebIDLParser.IDENTIFIER_WEBIDL, 0); }
		public InheritanceContext inheritance() {
			return getRuleContext(InheritanceContext.class,0);
		}
		public InterfaceMembersContext interfaceMembers() {
			return getRuleContext(InterfaceMembersContext.class,0);
		}
		public Interface_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interface_; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebIDLListener ) ((WebIDLListener)listener).enterInterface_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebIDLListener ) ((WebIDLListener)listener).exitInterface_(this);
		}
	}

	public final Interface_Context interface_() throws RecognitionException {
		Interface_Context _localctx = new Interface_Context(_ctx, getState());
		enterRule(_localctx, 10, RULE_interface_);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(226);
			match(T__1);
			setState(227);
			match(IDENTIFIER_WEBIDL);
			setState(228);
			inheritance();
			setState(229);
			match(T__2);
			setState(230);
			interfaceMembers();
			setState(231);
			match(T__3);
			setState(232);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
